[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://textures/gui/ai_cyan.png" type="Texture" id=2]
[ext_resource path="res://textures/gui/ai_pink.png" type="Texture" id=3]
[ext_resource path="res://textures/gui/checkbox_off.png" type="Texture" id=4]
[ext_resource path="res://textures/gui/checkbox_on.png" type="Texture" id=5]
[ext_resource path="res://textures/gui/title.png" type="Texture" id=6]
[ext_resource path="res://textures/gui/play.png" type="Texture" id=7]
[ext_resource path="res://textures/gui/play_on.png" type="Texture" id=8]

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="settings" type="Node2D" parent="."]

transform/pos = Vector2( 114, 98 )

[node name="ai_cyan" type="Sprite" parent="settings"]

transform/pos = Vector2( 69, 16 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="ai_pink" type="Sprite" parent="settings"]

transform/pos = Vector2( 69, 52 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="ai_1" type="TextureButton" parent="settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="ai_2" type="TextureButton" parent="settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 35.0
margin/right = 32.0
margin/bottom = 67.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 160, 32 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="play" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.0
margin/top = 267.0
margin/right = 208.0
margin/bottom = 307.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 4, 4 )
params/stretch_mode = 0

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]


